# ai-media-studio-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ai_media_studio_cli/: __init__.py  animations.py  download.py  main.py  model_manager.py  models_config.py  ui_components.py
